# logbook-sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  config.example.toml  config.test.toml  install.sh  test-state.db  test-state2.db  uninstall.sh
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
contrib/: config.toml.example  install.sh  logbook-sync.service
contrib/systemd/: logbook-sync.service  logbook-sync.user.service
docs/plans/: 2025-12-30-pota-upload-verification-design.md
src/: circuit_breaker.rs  clublog.rs  config.rs  eqsl.rs  error.rs  hrdlog.rs  lib.rs  lotw.rs  main.rs  metrics.rs  ntfy.rs  server.rs  sync_worker.rs
src/adif/: mod.rs  parser.rs  writer.rs
src/crypto/: mod.rs
src/db/: integrations.rs  mod.rs  users.rs
src/lofi/: client.rs  mod.rs  models.rs  sync.rs
src/pota/: auth_service.rs  browser.rs  mod.rs
src/qrz/: mod.rs
src/sync/: mod.rs
src/watcher/: mod.rs
src/wavelog/: mod.rs
src/web/: mod.rs
static/: index.html
test-logs/: 023337_W6JSV_79480_ZV0nAj8.adif  224437_W6JSV_79480_vW1W2pH.adif
