[package]
name = "logbook-sync"
version = "0.5.0"
edition = "2024"
description = "ADIF log synchronization daemon for amateur radio"
authors = ["jsvana"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (using rustls for cross-compilation support)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "multipart", "rustls-tls"] }

# QRZ API client
qrz-logbook-api = "0.1"

# Standard directories for caching tokens
dirs = "5"

# OpenSSL vendored for cross-compilation (qrz-logbook-api pulls in native-tls)
openssl = { version = "0.10", features = ["vendored"] }

# Configuration
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database (state tracking)
rusqlite = { version = "0.32", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Hashing for file checksums and HMAC
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# UUID generation for LoFi client key
uuid = { version = "1", features = ["v4"] }

# Random number generation for LoFi client secret
rand = "0.8"

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Systemd integration
sd-notify = "0.4"

# URL encoding for QRZ API
urlencoding = "2.1"

# Metrics and HTTP server for health checks
prometheus = "0.13"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
lazy_static = "1.4"

# Web server middleware
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Encryption for user configuration data
argon2 = "0.5"
chacha20poly1305 = "0.10"

# Password input for CLI
rpassword = "7"

# Base64 encoding for encryption
base64 = "0.22"

# Time handling for sessions
time = "0.3"

# Headless browser automation for POTA authentication
headless_chrome = "1.0"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
